# klon

./: .gitignore  CHANGELOG.md  KlonTestPlan.md  PLAN.md  README.md  com.taliskerman.klon.yml  crop_icon.py  implementation_plan.md  klon_0.2.4-1_all.deb.sha512  klon_0.2.4-1_amd64.build  klon_0.2.4-1_amd64.buildinfo  klon_0.2.4-1_amd64.changes  pyproject.toml  release.sh  test_iso_page.py
.github/workflows/: ci.yml
.pybuild/cpython3_3.12/: klon-0.1.0-py3-none-any.whl  klon-0.1.1-py3-none-any.whl  klon-0.1.2-py3-none-any.whl  klon-0.1.3-py3-none-any.whl  klon-0.1.4-py3-none-any.whl  (+9 more)
Audit/: klon_snyk_report.md  sbom.json
artifacts/: klon_0.1.0-1.dsc  klon_0.1.0-1_all.deb  klon_0.1.0-1_amd64.buildinfo  klon_0.1.0-1_amd64.changes  klon_0.1.1-1.dsc  klon_0.1.1-1_all.deb  klon_0.1.1-1_amd64.buildinfo  klon_0.1.1-1_amd64.changes  klon_0.1.2-1.dsc  klon_0.1.2-1_all.deb  klon_0.1.2-1_amd64.buildinfo  klon_0.1.2-1_amd64.changes  klon_0.1.3-1.dsc  klon_0.1.3-1_amd64.buildinfo  klon_0.1.3-1_amd64.changes  klon_0.1.4-1.dsc  klon_0.1.4-1_amd64.buildinfo  klon_0.1.4-1_amd64.changes  klon_0.1.5-1.dsc  klon_0.1.5-1_all.deb  klon_0.1.5-1_amd64.buildinfo  klon_0.1.5-1_amd64.changes  klon_0.1.6-1.dsc  klon_0.1.6-1_amd64.buildinfo  klon_0.1.6-1_amd64.changes  klon_0.1.7-1.dsc  klon_0.1.7-1_all.deb  klon_0.1.7-1_amd64.buildinfo  klon_0.1.7-1_amd64.changes  klon_0.1.8-1.dsc  klon_0.1.8-1_all.deb  klon_0.1.8-1_amd64.buildinfo  klon_0.1.8-1_amd64.changes  klon_0.1.9-1.dsc  klon_0.1.9-1_all.deb  klon_0.1.9-1_amd64.buildinfo  klon_0.1.9-1_amd64.changes  klon_0.2.0-1.dsc  klon_0.2.0-1_all.deb  klon_0.2.0-1_amd64.buildinfo  (+15 more)
data/: com.taliskerman.klon.desktop
debian/: changelog  control  copyright  files  install  klon.desktop  klon.postinst.debhelper  klon.prerm.debhelper  klon.substvars  postinst  rules
docs/: KLON_USER_GUIDE.md  walkthrough.md
plan/: klonPlan.md
tests/: conftest.py  run_vm_test.sh  test_clone.py  test_iso.py  test_safety.py
(+39 files in other folders)
