[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klon"
version = "0.3.2"
description = "A system cloning and recovery tool for Pop!_OS"
readme = "README.md"
authors = [
  { name = "Chuck Talk", email = "chuck@nordheim.online" },
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
    "requests",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
klon = "klon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
klon = ["*.gresource"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Backend tests import from src/ (see tests/conftest.py) and mock all hardware
# access, so they run without a GTK runtime or any real block device.
